K8S-STACK/v2/bi-h5/app.ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bi-h5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: bi-h5
  name: bi-h5
  namespace: bi-h5
spec:
  selector:
    matchLabels:
      k8s-app: bi-h5
  replicas: 2
  template:
    metadata:
      labels:
        k8s-app: bi-h5
    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-master1
      containers:
      - name: bi-h5
        image: bitnami/nginx:1.16
        volumeMounts:
        - mountPath: /opt/bitnami/nginx/conf/server_blocks/my_server_block.conf:ro
          name: nginx-volume
        - mountPath: /app
          name: html-volume
        ports:
        - name: http
          containerPort: 8080
      volumes:
      - name: nginx-volume
        hostPath:
          path: /data/f2e-k8s-stack/bi-h5/app.conf
      - name: html-volume 
        hostPath:
          path: /data/f2e-k8s-stack/bi-h5/app
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: bi-h5
  name: bi-h5
  namespace: bi-h5
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    k8s-app: bi-h5
