K8S-STACK/v2/bi-h5/bi-h5-route.ns.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bi-h5-route
  namespace: bi-h5
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`static.bifrontend.ruqimobility.com`)
      kind: Rule
      services:
        - name: bi-h5
          port: 80
